--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site settings
 title: IPTV技术文章
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://freeiptvcn.github.io" # the base hostname & protocol for your site
+baseurl: "/blog/" # the subpath of your site, e.g. /blog
+url: "http://freeiptv.cn/" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
